--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_code_scanner: ^0.7.0
   http: ^0.13.4
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
