--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   qr_code_scanner: ^0.7.0
   http: ^0.13.4
   qr_flutter: ^4.0.0
-  flutter_dropzone: ^2.0.1
+  flutter_dropzone: ^3.0.5
+  dotted_border:
 
 dev_dependencies:
   flutter_test:
