--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_dropzone: ^3.0.5
   dotted_border:
   intl: ^0.17.0
+  desktop_drop: ^0.3.3
 
 dev_dependencies:
   flutter_test:
