--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dotted_border:
   intl: ^0.17.0
   desktop_drop: ^0.3.3
+  cross_file: ^0.3.3+1
 
 dev_dependencies:
   flutter_test:
